2004-06-27  Ulrich Drepper  <drepper@redhat.com>

	* elf/ldconfig.c (add_dir): Take chroot into account.
	Based on changes by HJ Lu and Hideki Iwamoto.

	* nscd/connections.c (invalidate_cache): If the host cache has to
	be invalidated, re-read resolv.conf.

	* resolv/resolv.h (RES_NOIP6DOTINT): Define.
	* resolv/res_init.c (res_setoptions): Handle no-ip6-dotint option.
	* resolv/gethnamaddr.c (gethostbyaddr): Don't lookup with .ip6.int
	if RES_NOIP6DOTINT flag is set.
	* resolv/nss_dns/dns-host.c (_nss_dns_gethostbyaddr_r): Likewise.

2004-06-25  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/powerpc/fcntl.c: Move to...
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/fcntl.c: ... here.
	* sysdeps/unix/sysv/linux/powerpc/lockf64.c: Move to...
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/lockf64.c: ... here.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/fcntl.c: New file.

	* sysdeps/unix/sysv/linux/x86_64/bits/fcntl.h (F_GETLK, F_SETLK,
	F_SETLKW): Fix values for -m32 -D_FILE_OFFSET_BITS=64.

2004-06-21  Jakub Jelinek  <jakub@redhat.com>

	[BZ #231]
	* sysdeps/unix/alpha/Makefile: New file.
	* sysdeps/unix/alpha/rt-sysdep.S: New file.
	Reported by Jakub Bogusz <qboosh@pld-linux.org>.

2004-06-18  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): For AI_CANONNAME,
	determine the canonical name only for the first returned entry.

	* inet/bug-if1.c: New file.
	* inet/Makefile (tests): Add bug-if1.

2004-06-18  Roland McGrath  <roland@frob.com>

	* Makerules (compile-mkdep-flags): Add -MT $@.

	* Makefile (dist, tag-for-dist): New targets.
	(files-for-dist, tag-of-stem): New variables.
	(glibc-%.tar glibc-linuxthreads-%.tar): New pattern rule.
	Make tar files using cvs export.
	(%.bz2, %.gz, tag-%): New pattern rules.
	(distribute): Variable removed.
	(+subdir_targets): Remove distinfo targets.
	(echo_subdirs, echo-distinfo, parent_echo-distinfo): Targets removed.
	(rpm/%): Pattern rule removed.